      not the current one (SEWI)
    - Fixed: Padre command line arguments work again when using dev.pl (SEWI)
    - Fixed: Menu options get disabled/enabled as needed again, this also
      fixed ticket #742, #762, #764 and #771 (SEWI)
    - Alt-Left and Alt-Right switch to the neighbor panels which Ctrl-Tab
      uses the last-used order (SEWI)

0.51 2009.12.06
    - Find all option showing all matches in bottom tab (CODE4PAY)
    - Improved FTP error handling (SEWI)
    - Open URLs from command line (SEWI)
    - Configurable location of the 'perltags' file for autocompletion (SEWI)
    - Fixed ticket #419: find variable declaration does not work at the end of
      a variable (PATRICKAS)
    - Fixed ticket #654: Lexical Rename of Variable - Can't highlight the
      whole variable (PATRICKAS)
    - Improved "Find Method Declaration" based on perltags (SMUELLER)
    - Basic XS-Document support as needed for the full monty in a plugin (SMUELLER)
    - XS (perlapi) calltips based on the perlapi of 5.10.1 
      by default. Can be configured to show the perlapi of any release of
      perl back to 5.6.0 if Padre::Plugin::XS is installed. (SMUELLER)
    - Padre::Action::Queue for auto-processing of Padre actions (SEWI)
    - Perl autocompletion is much more configurable now (SEWI)
    - Indentation auto-detection now skips POD for ::Perl documents (SMUELLER)
    - Find in Files now has a checkbox that shows files that do not match (GARU)
    - Tests which are not needed for end-user installation now in xt (ADAMK)
    - Added a test for actions (SEWI)
    - Re-enabled the beginner error check tests (SEWI)
    - Better focus transitions during search/replace, which should make
      them easier to work with quickly (ADAMK)
    - Rolled back function list improvements that were causing regressions (ADAMK)
    - Added project sub-path intuition when saving new files (ADAMK)
    - Fixed a number of search/replace related bugs (ADAMK)