@@ -359,7 +359,6 @@ sub show_error_message {
 # according to current sort criterion.
 #
 sub _refresh_list {
-	$DB::single = $DB::single = 1;
 	my $self = shift;
 
 	# Clear image list & fill it again
